# github-repo-public-indexer

./: .env.example  .flake8  .gitignore  CLAUDE.md  CONTRIBUTING_TEMPLATE.md  JSON_SCHEMA.md  PROMPT_TEMPLATE.md  QUICK_REFERENCE.md  README.md  SPECIFICATION.md  TESTING.md  USAGE.md  WORKFLOW.md  collect_repos.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
.github/: REPOSITORY_METADATA.md
.github/workflows/: ci.yml
src/: __init__.py  github_client.py  json_generator.py  metadata_collector.py
tests/: __init__.py  conftest.py
tests/unit/: test_github_client.py  test_json_generator.py  test_metadata_collector.py
